# parallel-asyncio-kafka-consumer

./: README.md  requirments.txt  setup.cfg
src/parallel_asyncio_kafka_consumer/: kafka_consumer.py
