[metadata]
name = parallel-asyncio-kafka-consumer
version = 0.0.0
author = Tanapat Kahabodeekanokkul
author_email = pahntanapat@gmail.com
description = AWS Lambda essential stateful dependencies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pahntanapat/parallel-asyncio-kafka-consumer
project_urls =
bug tracker = https://github.com/pahntanapat/parallel-asyncio-kafka-consumer/issues
classifiers =
programming language :: Python :: 3
license :: OSI Approved :: MIT License
operating system :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.extras_require]
asyncio =
    aiokafka
thread =
    kafka-python

[options.packages.find]
where = src